<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- SomethingOS Settings -->
    <string name="somethingos_dashboard_title">SomethingOS</string>

    <!-- Categories -->
    <string name="something_simulation_title">Simulation</string>
    <string name="something_simulation_summary">Simulate apps and behaviors</string>
    <string name="something_interface_title">Interface</string>
    <string name="something_interface_summary">Customize the look and feel</string>
    <string name="something_system_options_title">System Options</string>
    <string name="something_system_options_summary">Tweak system settings</string>
    <string name="something_extensions_title">Extensions</string>
    <string name="something_extensions_summary">Manage your extensions</string>

    <!-- Interface / Bootanimation -->
    <string name="bootanimation_title">Boot Animation</string>
    <string name="bootanimation_summary">Customize your bootanimation</string>
    <string name="preview_category_title">Preview</string>
    <!-- Interface / Brightness Slider -->
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Adjust brightness slider from the Quick Settings</string>
    <string name="qs_brightness_slider_never">Never show</string>
    <string name="qs_brightness_slider_expanded">Show when expanded</string>
    <string name="qs_brightness_slider_always">Show always</string>
    <string name="qs_brightness_slider_position_title">Position</string>
    <string name="qs_brightness_slider_position_top">Top</string>
    <string name="qs_brightness_slider_position_bottom">Bottom</string>
    <!-- Interface / QS auto brightness icon -->
    <string name="qs_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <!-- Interface / Navbar -->
    <string name="navbar_category_title">Navigation bar</string>
    <string name="navbar_visibility_title">Navigation bar visibility</string>
    <string name="navbar_visibility_summary">Show the navigation bar</string>

    <!-- System Options -->
    <string name="app_category">Applications</string>
    <string name="app_downgrade_title">Allow package downgrade</string>
    <string name="app_downgrade_summary">Allow installation of lower version of an app</string>
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>

    <!-- Simulation -->
    <string name="google_category">Google</string>
    <string name="gphotos_title">Unlimited Google Photos</string>
    <string name="gphotos_summary">Simulate a Pixel XL to get unlimited storage</string>
    <string name="gapps_title">Google Apps</string>
    <string name="gapps_summary">Simulate the latest Pixel on Google apps</string>
    <!-- Integrity -->
    <string name="something_play_integrity_dashboard_title">Play Integrity</string>
    <string name="play_integrity_summary">Adjust Play Integrity settings</string>
    <string name="play_integrity_update_title">Update Play Integrity</string>
    <string name="play_integrity_update_summary">Apply latest spoof</string>
    <string name="play_update_title">Update</string>
    <string name="play_fingerprint">Spoofed values</string>
    <string name="play_integrity_switch_title">Enable Play Integrity</string>
    <string name="play_options">Options</string>
    <string name="play_integrity_switch_summary">Enable Play Integrity spoof</string>
    <string name="play_integrity_tricky_switch_title">Disable Chain of trust</string>
    <string name="play_integrity_tricky_switch_summary">Will return unsupported for Key Attestation</string>

    <!-- About Something -->
    <string name="about_something_title">About</string>
    <string name="about_something_social">Social</string>
    <string name="something_website_title">Website</string>
    <string name="something_website_summary">Visit our website</string>
    <string name="something_telegram_title">Telegram</string>
    <string name="something_telegram_summary">Join our Telegram group</string>
    <string name="something_twitter_title">Twitter</string>
    <string name="something_twitter_summary">Follow us on Twitter</string>
    <string name="something_paypal_title">Paypal</string>
    <string name="something_paypal_summary">Support the developer with PayPal</string>
    <string name="early_donators">Early Donators</string>
    <string name="somethingos_team">SomethingOS Team</string>
    <string name="something_credits">Credits</string>

    <!-- Network traffic -->
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Display and customize current network traffic levels</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_location_disable">Disabled</string>
    <string name="network_traffic_location_statusbar">Statusbar</string>
    <string name="network_traffic_location_quick_statusbar">Quick Statusbar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_up">Upload only</string>
    <string name="network_traffic_mode_down">Download only</string>
    <string name="network_traffic_mode_all">Upload and download</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when inactive</string>
    <string name="network_traffic_autohide_kilobits" translatable="false">Kb/s</string>
    <string name="network_traffic_autohide_kilobytes" translatable="false">KB/s</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="network_traffic_refresh_interval_summary">Duration after which speed is remeasured</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_bits">Bits per second (b/s)</string>
    <string name="network_traffic_units_kilobits">Kilobits per second (kb/s)</string>
    <string name="network_traffic_units_megabits">Megabits per second (Mb/s)</string>
    <string name="network_traffic_units_bytes">Bytes per second (B/s)</string>
    <string name="network_traffic_units_kilobytes">Kilobytes per second (kB/s)</string>
    <string name="network_traffic_units_megabytes">Megabytes per second (MB/s)</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>

</resources>