<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/network_traffic_settings_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <lineageos.preference.SystemSettingMainSwitchPreference
        android:key="network_traffic_enabled"
        android:title="@string/enable" />

    <co.aospa.framework.preference.SystemSettingListPreference
        android:key="network_traffic_mode"
        android:title="@string/network_traffic_mode_title"
        android:entries="@array/network_traffic_mode_entries"
        android:entryValues="@array/network_traffic_mode_values"
        android:summary="%s"
        android:dependency="network_traffic_enabled"
        android:defaultValue="0" />

    <co.aospa.framework.preference.SystemSettingSwitchPreference
        android:key="network_traffic_autohide"
        android:title="@string/network_traffic_autohide"
        android:summary="@string/network_traffic_autohide_summary"
        android:dependency="network_traffic_enabled"
        android:defaultValue="true" />

    <co.aospa.framework.preference.SystemSettingSeekBarPreference
        android:key="network_traffic_autohide_threshold"
        android:title="@string/network_traffic_autohide_threshold"
        android:defaultValue="0"
        android:max="10000"
        settings:min="0"
        settings:units="@string/network_traffic_autohide_kilobytes"
        settings:interval="10"
        android:dependency="network_traffic_autohide" />

    <co.aospa.framework.preference.SystemSettingSeekBarPreference
        android:key="network_traffic_refresh_interval"
        android:title="@string/network_traffic_refresh_interval_title"
        android:summary="@string/network_traffic_refresh_interval_summary"
        android:dependency="network_traffic_enabled"
        android:defaultValue="2"
        android:max="10"
        settings:min="1"
        settings:units="@string/unit_seconds" />

    <co.aospa.framework.preference.SystemSettingListPreference
        android:key="network_traffic_units"
        android:title="@string/network_traffic_units_title"
        android:entries="@array/network_traffic_units_entries"
        android:entryValues="@array/network_traffic_units_values"
        android:summary="%s"
        android:dependency="network_traffic_enabled"
        android:defaultValue="1" />

    <co.aospa.framework.preference.SystemSettingSwitchPreference
        android:key="network_traffic_hidearrow"
        android:title="@string/network_traffic_hidearrow"
        android:summary="@string/network_traffic_hidearrow_summary"
        android:dependency="network_traffic_enabled"
        android:defaultValue="false" />
</PreferenceScreen>